#1592 #364488
Fix get and load