@@ -2,8 +2,7 @@ package ru.job4j.gc.references.cache;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.StringJoiner;
+import java.nio.file.Path;
 
 public class DirFileCache extends AbstractCache<String, String> {
     private final String cachingDir;
@@ -14,14 +13,14 @@ public class DirFileCache extends AbstractCache<String, String> {
 
     @Override
     protected String load(String key) {
-        StringJoiner text = new StringJoiner(System.lineSeparator());
+        String text = "";
         try {
-            Files.lines(Paths.get(cachingDir.concat(key)))
-                    .forEach(text::add);
+            text = Files.readString(Path.of(cachingDir, key));
+            put(key, text);
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return text.toString();
+        return text;
     }
 
 }
